# spinal-test

./: .gitignore  Readme.md  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/src/: api_models.py  entrypoint.sh  main.py  settings.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: da54e7a9712e_initial.py
backend/src/database/: session.py
backend/src/database/models/: example_model.py
backend/src/scripts/: seed_dev.py
frontend/: instructions.txt
scripts/: init-database.sql
