[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.1",
    "fastapi>=0.121.2",
    "granian[reload]>=2.5.7",
    "orjson>=3.11.4",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
]
